ruka-lang.org/src/lib/interpreter/fixtures/type-err/return-outside-fn.ruka
// expect: 'return' outside function
return 1
